@@ -101,14 +101,6 @@ g_object_connect (G_OBJECT (greeter), "quit", G_CALLBACK (quit_cb), NULL);
 
 @ldmgreeter: the object which received the signal.
 
-<!-- ##### SIGNAL LdmGreeter::show-error ##### -->
-<para>
-
-</para>
-
-@ldmgreeter: the object which received the signal.
-@arg1: 
-
 <!-- ##### SIGNAL LdmGreeter::show-message ##### -->
 <para>
 
@@ -116,6 +108,7 @@ g_object_connect (G_OBJECT (greeter), "quit", G_CALLBACK (quit_cb), NULL);
 
 @ldmgreeter: the object which received the signal.
 @arg1: 
+@Param3: 
 
 <!-- ##### SIGNAL LdmGreeter::show-prompt ##### -->
 <para>
